# projects

./: .env.example  .env.local  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vercel.json  vite.config.js  warden.toml
api/: albums.js  discover.js  episode.js  generate.js  images.js  ping.js  pixshop-image.js  proxy.js  rate.js  rating.js  storage.js
api/_lib/: asset-sucker-helpers.js  auth.js  log.js
api/asset-sucker/: download.js  proxy.js  scrape.js
api/assets/: discover.js  proxy.js
api/lib/: asset-sucker-helpers.js  auth.js  net.js
pages/AI/TODO/: index.html
pages/AI/brainstorm/: index.html
pages/AI/codemetheus/: index.html
pages/AI/pixshop/: STOPindex.html
pages/AI/tp-deal-gen/: index.html
pages/Games/FFX SGE/: index.html
pages/Imagery/comic panels/: index.html  package-lock.json  package.json  tsconfig.json  warden.toml
pages/Lifestyle/meal-planning/: index.html
pages/TravelPerks/copywriting/: app.js  (+3 more)
pages/cat.Utilities/diranalyze/backend/: .diranalyze_db.sqlite3  Cargo.toml
pages/cat.Utilities/diranalyze/backend/src/: db_manage.rs  main.rs  version_control.rs
pages/dumbell-routine/: index.html
pages/my-first-project/: index.html
public/: ai.js  index.html  projects.json  script.js
public/ffmpeg/: ffmpeg-online_export.txt  webphy_export.txt
scripts/: build.cjs  build.js  dev.sh
src/: App.css  App.jsx  drawer-fix.css  index.css  main.jsx  ui-fixes.css  ui.jsx
src/components/: ProjectPage.jsx  Sidebar.jsx  WelcomePage.jsx  welcome.css
src/hooks/: useIsMobile.js  useProjects.js
(+288 files in other folders)
