[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["json", "ws"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
futures-util = "0.3"

# --- New dependencies for versioning ---
rusqlite = { version = "0.31", features = ["bundled", "chrono"] } # Using "bundled" for easier setup
chrono = { version = "0.4", features = ["serde"] }
# We'll assume hashing happens before this step or is passed in.
# If the backend needs to do its own hashing:
# sha2 = "0.10"
# hex = "0.4"
# --- End new dependencies ---